# bwinfpresentation

./: Arbeitsblatt  Canvas.canvas  Gliederung.md
Aufgabe 1/: .vimrc  CMakeLists.txt  game.cpp  game.h  gameState.h  helper.cpp  helper.h  main.cpp  neovim.json  solution.cpp  solution.h
Aufgabe 1/.cache/clangd/index/: circle.cpp.5D8FBF094BE13F45.idx  circle.cpp.8E9AE01994C24432.idx  circle.h.1EBB0CC042290705.idx  circle.h.1EDBF823B39853D8.idx  engine.cpp.0D56F947EF81560F.idx  engine.cpp.7C73A489764C2CAF.idx  engine.h.B972F0BB71F82EE1.idx  engine.h.D1DCE6832CA62C1A.idx  font.cpp.85643748AFD2F821.idx  font.cpp.D55343BF7C6ADEDC.idx  font.h.584ADA397813C5E5.idx  font.h.D9CE82595A9BB891.idx  framebuffer.cpp.0D3EA488C582A8F8.idx  game.cpp.949CFF6BF28D5AD1.idx  (+60 more)
Aufgabe 1/engine/: engine.cpp  engine.h  font.cpp  font.h  framebuffer.cpp  framebuffer.h  instanceObject.cpp  instanceObject.h  object.cpp  object.h  system.h  text.cpp  text.h  texture.cpp  texture.h  uiObject.cpp  uiObject.h  uiTexture.cpp  uiTexture.h
Aufgabe 1/engine/common/: loadOBJ.cpp  loadOBJ.h  loadPNG.cpp  loadShader.cpp  loadShader.h
Aufgabe 1/engine/shaders/: background.fragmentshader.glsl  background.vertexshader.glsl  color.fragmentshader.glsl  color.vertexshader.glsl  instance.fragmentshader.glsl  instance.vertexshader.glsl  normalcolor.fragmentshader.glsl  normalcolor.vertexshader.glsl  text.fragmentshader.glsl  text.vertexshader.glsl  texture.fragmentshader.glsl  texture.vertexshader.glsl
Aufgabe 1/engine/shapes/: circle.cpp  circle.h  uiCircle.cpp  uiCircle.h
Aufgabe 1/res/: wenigerkrumm8.txt
(+11 files in other folders)
